cmake_minimum_required(VERSION 2.8)
project(GameFramework)
include(FindPkgConfig)
pkg_search_module(SDL2 REQUIRED sdl2)
file(GLOB SRC "*.cpp")
add_executable(GameFramework ${SRC})
set_property(TARGET GameFramework PROPERTY CXX_STANDARD 11)
target_include_directories(GameFramework PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(GameFramework ${SDL2_LIBRARIES})    
